Fix GitHub button alignment and update styles

--- a/src/index.css
+++ b/src/index.css
@@ -263,12 +263,12 @@ nav ul li a:hover {
   margin-top: -20px;
   font-family: "Poppins", sans-serif;
 =======
-  color: rgba(255, 255, 255, 0.726); /* White text for contrast */
-  font-size: 1.8em; /* Font size */
+  color: rgba(255, 255, 255, 0.726); 
+  font-size: 1.8em; 
   display: block;
   margin-bottom: 33px;
   font-family: 'Poppins', sans-serif;
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+
 }
 
 .project-section h1:hover {
@@ -434,76 +434,14 @@ nav ul li a:hover {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
-  body {
-    min-width: fit-content;
-=======
-.menu-icon{
-  display: none;
-}
-
-
 
 @media screen and  (max-width:768px){
   body{
      min-width: fit-content;
      
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+
   }
-  .project-section {
-    padding: 13px;
-    left: 23px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-  }
-<<<<<<< HEAD
-  .project-section h1 {
-    position: relative;
-    top: -130px;
-  }
-  .project-section img {
-    position: relative;
-    top: -70px;
-  }
-  .project-section .title {
-    position: relative;
-    top: -72px;
-  }
-  .project-section .descc {
-=======
-  .project-section h1{
-    position: relative;
-    top: -130px;
-  }
-  .project-section img{
-    position: relative;
-    top:-70px
-  }
-  .project-section .title{
-    position: relative;
-    top: -72px;
-  }
-  .project-section .descc{
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
-    position: relative;
-    top: -68px;
-    margin-bottom: 160px;
-  }
-  .row {
-    display: block;
-    margin: auto;
-    padding: auto;
-    position: relative;
-    gap: 13px;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-  }
-  .column {
-    width: 97%; /* Make each column take up the full width */
-    margin-bottom: 50px;
-  }
+  
   .contact-section {
     padding: 23px;
     text-align: center;
@@ -517,15 +455,15 @@ nav ul li a:hover {
   .secondsection .vertical {
     height: unset;
     position: relative;
-<<<<<<< HEAD
+
     top: -200px;
   }
   .contact-section {
-=======
+
     top:-200px
   }
   .contact-section{
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+
     margin-top: -136px;
     height: auto;
   }
@@ -535,17 +473,17 @@ nav ul li a:hover {
   .vertical-title {
     left: 45px;
   }
-<<<<<<< HEAD
+
   .vertical-desc {
     display: none;
   }
-  .secondsection.box {
-=======
+
+
   .vertical-desc{
     display: none;
   }
   .secondsection.box{
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+
     width: 50vw;
   }
   .leftsection {
@@ -560,13 +498,10 @@ nav ul li a:hover {
     display: flex;
     justify-content: center;
   }
-<<<<<<< HEAD
-  .secondsection {
-    top: 45px;
-=======
+
   .secondsection{
     top:45px;
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -590,22 +525,22 @@ nav ul li a:hover {
   }
   nav {
     width: 100%;
-<<<<<<< HEAD
+
     background-color: (0, 0, 34);
-=======
+
     background-color: (0,0,34);
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+
     top: 0;
     z-index: 2; /* Ensure it appears above other content */
   }
   .right {
     margin-top: 10px;
   }
-<<<<<<< HEAD
+
   .header {
-=======
+
   .header{
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+
     padding: 1.25rem 4%;
   }
   nav ul {
@@ -634,7 +569,7 @@ nav ul li a:hover {
     margin: 1.5rem 0;
     margin-left: 15px;
   }
-<<<<<<< HEAD
+
 
   .menu-icon {
     display: block;
@@ -655,7 +590,7 @@ nav ul li a:hover {
     margin-bottom: -69px;
   }
   #element {
-=======
+
   
   .menu-icon {
    display: block;
@@ -676,7 +611,7 @@ nav ul li a:hover {
     margin-bottom: -69px;
   }
   #element{
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+
     position: relative;
     margin-bottom: 35px;
     margin: 68px;
@@ -685,7 +620,7 @@ nav ul li a:hover {
     position: relative;
     top: -206px;
   }
-<<<<<<< HEAD
+
   hr {
     position: relative;
     top: -168px;
@@ -705,7 +640,7 @@ nav ul li a:hover {
     margin-bottom: 50px;
   }
 }
-=======
+
   hr{
     position: relative;
     top:-168px
@@ -725,4 +660,4 @@ nav ul li a:hover {
     margin-bottom: 50px;
   }
 }    
->>>>>>> 8ae6bfbd53bd7397c930696233a07857085cc55c
+}
